--- a/style.css
+++ b/style.css
@@ -20,5 +20,32 @@ body{
     background-color: #fff;
     display: flex;
     align-items: center;
-    border: 5px solid;
+    border: 5px solid rgba(190, 190,190, 0);
+    box-shadow: 0 0 15px rgba(100, 100, 100. 0.3);
+    flex-direction: column;
+}
+
+
+.input{
+    padding: 12px 20px;
+    width: 300px;
+    margin-bottom: 20px;
+}
+
+button{
+    padding: 12px 20px;
+    margin-bottom: 20px;
+    border: 0;
+    background: #485696;
+    color: #fff;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+#qr-image{
+    display: none;
+}
+
+img{
+    margin-bottom: 20px;
 }
